--- a/index.html
+++ b/index.html
@@ -3,36 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <title>แนะนำตัว</title>
+    <link href="https://fonts.googleapis.com/css2?family=Sarabun:wght@300;600&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: 'Tahoma', sans-serif;
-            background-color: #f0f8ff;
-            color: #333;
-            padding: 30px;
-            line-height: 1.6;
+            font-family: 'Sarabun', sans-serif;
+            background: linear-gradient(to bottom right, #fceabb, #f8b500);
+            margin: 0;
+            padding: 0;
         }
-        .container {
-            max-width: 600px;
-            margin: auto;
-            background: #fff;
-            padding: 25px;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+        .card {
+            max-width: 700px;
+            background-color: white;
+            margin: 60px auto;
+            padding: 40px;
+            border-radius: 15px;
+            box-shadow: 0 10px 25px rgba(0,0,0,0.15);
         }
         h1 {
-            color: #0055a5;
+            text-align: center;
+            color: #f57c00;
+            font-size: 36px;
+            margin-bottom: 20px;
+        }
+        p {
+            font-size: 18px;
+            margin: 12px 0;
+            color: #444;
+        }
+        strong {
+            color: #333;
+        }
+        .footer {
+            text-align: center;
+            margin-top: 30px;
+            font-size: 14px;
+            color: #999;
         }
     </style>
 </head>
 <body>
-    <div class="container">
-        <h1>แนะนำตัว</h1>
-        <p>สวัสดี ค่ะ</p>
-        <p>ชื่อ: <strong>ชื่อ นางสาว สุจรรย์จิรา วงค์สกูล</strong></p>
-        <p>อายุ: <strong>อายุ 19 </strong> ปี</p>
-        <p>อาชีพ: <strong>อาชีพ นักธุรกิจ</strong></p>
-        <p>ความสนใจ: <strong>สิ่งที่คุณสนใจ การท่องเที่ยว, การออกแบบ</strong></p>
-        <p>ขอบคุณที่เข้ามาเยี่ยมชมหน้านี้ ค่ะ!</p>
+    <div class="card">
+        <h1>สวัสดีค่ะ 😊</h1>
+        <p><strong>ชื่อ:</strong> นางสาว สุจรรย์จิรา วงค์สกูล</p>
+        <p><strong>อายุ:</strong> 19 ปี</p>
+        <p><strong>อาชีพ:</strong> นักธุรกิจ</p>
+        <p><strong>ความสนใจ:</strong> การวาดภาพ, UX/UI Design, การอ่านหนังสือ และการท่องเที่ยว</p>
+        <p>ยินดีที่ได้รู้จักทุกคนค่ะ! ขอบคุณที่แวะมาดูโปรไฟล์ของฉัน</p>
+        <div class="footer">© 2025 โดย สุจรรย์จิรา</div>
     </div>
 </body>
 </html>
