--- a/index.html
+++ b/index.html
@@ -1,55 +1,192 @@
-<!DOCTYPE html>
+
+<!doctype html>
 <html lang="th">
 <head>
-    <meta charset="UTF-8">
-    <title>แนะนำตัว</title>
-    <link href="https://fonts.googleapis.com/css2?family=Sarabun:wght@300;600&display=swap" rel="stylesheet">
-    <style>
-        body {
-            font-family: 'Sarabun', sans-serif;
-            background: linear-gradient(to bottom right, #fceabb, #f8b500);
-            margin: 0;
-            padding: 0;
-        }
-        .card {
-            max-width: 700px;
-            background-color: white;
-            margin: 60px auto;
-            padding: 40px;
-            border-radius: 15px;
-            box-shadow: 0 10px 25px rgba(0,0,0,0.15);
-        }
-        h1 {
-            text-align: center;
-            color: #f57c00;
-            font-size: 36px;
-            margin-bottom: 20px;
-        }
-        p {
-            font-size: 18px;
-            margin: 12px 0;
-            color: #444;
-        }
-        strong {
-            color: #333;
-        }
-        .footer {
-            text-align: center;
-            margin-top: 30px;
-            font-size: 14px;
-            color: #999;
-        }
-    </style>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Portfolio </title>
+  <link href="https://fonts.googleapis.com/css2?family=Sarabun&family=Great+Vibes&display=swap" rel="stylesheet">
+  <style>
+    body {
+      font-family: "Sarabun", sans-serif;
+      margin: 0; padding: 0;
+      background: linear-gradient(180deg, #fefaff 0%, #e9e6ff 50%, #f6f9ff 100%);
+      color: #333;
+      overflow-x: hidden;
+    }
+
+    /* ✨ เอฟเฟกต์แสงนางฟ้า */
+    body::before {
+      content: "";
+      position: fixed;
+      top: 0; left: 0; right: 0; bottom: 0;
+      background: radial-gradient(circle at top center, rgba(255,255,255,0.8), transparent 70%),
+                  url('https://www.transparenttextures.com/patterns/stardust.png');
+      animation: sparkle 10s infinite linear;
+      z-index: -1;
+    }
+    @keyframes sparkle {
+      0% { background-position: 0 0, 0 0; }
+      100% { background-position: 1000px 1000px, 0 0; }
+    }
+
+    .container {
+      max-width: 850px;
+      margin: 0 auto;
+      padding: 30px;
+      background: rgba(255,255,255,0.8);
+      border-radius: 20px;
+      box-shadow: 0 8px 30px rgba(200,180,255,0.4);
+      backdrop-filter: blur(10px);
+      animation: fadeIn 1.5s ease-in;
+    }
+
+    header {
+      text-align: center;
+      padding: 20px 0;
+    }
+
+    img.avatar {
+      width: 130px; height: 130px;
+      border-radius: 50%;
+      object-fit: cover;
+      box-shadow: 0 0 15px rgba(255, 200, 255, 0.7);
+      border: 3px solid #fff;
+      animation: float 3s ease-in-out infinite;
+    }
+
+    h1 {
+      margin: 15px 0 5px;
+      font-size: 26px;
+      color: #6a4fb3;
+      font-family: "Great Vibes", cursive;
+    }
+
+    h2 {
+      border-bottom: 2px solid #decaff;
+      padding-bottom: 5px;
+      margin-top: 35px;
+      color: #6c63ff;
+      text-shadow: 0 0 5px rgba(200,200,255,0.3);
+    }
+
+    p, li { line-height: 1.7; }
+
+    ul { padding-left: 25px; }
+
+    a {
+      color: #a770ef;
+      text-decoration: none;
+      transition: all 0.3s ease;
+    }
+    a:hover {
+      color: #fcb2ff;
+      text-shadow: 0 0 8px #ffc2ff;
+    }
+
+    .tag {
+      display: inline-block;
+      background: linear-gradient(90deg, #fce3ff, #e8eaff);
+      color: #555;
+      padding: 5px 10px;
+      border-radius: 12px;
+      font-size: 13px;
+      margin: 3px;
+      box-shadow: 0 0 5px rgba(180,150,255,0.3);
+    }
+
+    footer {
+      text-align: center;
+      font-size: 13px;
+      color: #777;
+      margin-top: 40px;
+      padding: 15px 0;
+      border-top: 1px solid #ddd;
+    }
+
+    /* ✨ เอฟเฟกต์เคลื่อนไหว */
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
+    @keyframes float {
+      0%, 100% { transform: translateY(0); }
+      50% { transform: translateY(-8px); }
+    }
+  </style>
 </head>
 <body>
-    <div class="card">
-        <h1>สวัสดีค่ะ 😊</h1>
-        <p><strong>ชื่อ:</strong> นางสาว สุจรรย์จิรา วงค์สกูล</p>
-        <p><strong>อายุ:</strong> 19 ปี</p>
-        <p><strong>อาชีพ:</strong> นักธุรกิจ</p>
-        <p><strong>ความสนใจ:</strong> การวาดภาพ, UX/UI Design, การอ่านหนังสือ และการท่องเที่ยว</p>
-        <p>ยินดีที่ได้รู้จักทุกคนค่ะ! ขอบคุณที่แวะมาดูโปรไฟล์ของฉัน</p>
-        <div class="footer">© 2025 โดย สุจรรย์จิรา</div>
-    </div>
+  <div class="container">
+    <header>
+      <img class="avatar" src="c:\Users\StealMS\Documents\งานปี 2\โปรไฟแนะนำ.jpg" alt="avatar">
+      <h1>ชื่อ นางสาว สุจรรย์จิรา วงค์สกูล</h1>
+      <p>สนใจด้าน AI, code , การออกแบบ , การทำธุรกิจทางด้านIT
+    </header>
+
+    <section id="profile">
+      <h2>1. แนะนำตัว (Introduction / Profile)</h2>
+      <p>สวัสดีค่ะ <strong>ชื่อ นางสาว สุจรรย์จิรา วงค์สกูล</strong>
+        <p>นักศึกษาคณะวิทยาศาสตร์ สาขาเทคโนโลยีสารสนเทศ รหัสนักศึกษา 67040233124</p>
+        <p>สนใจด้าน AI และการเข้าใจด้านโค้ด การนำความรู้ที่เรียนมาพัฒนาในการใช้ชีวิตให้สะดวกขึ้น และสร้างสิ่งใหม่ ๆ ที่ตอบโจทย์ตัวเอง</p>
+      <p>
+        <span class="tag">ภาษา: ไทย / English</span>
+        <span class="tag">สถานะ: นักศึกษา ปี 2</span>
+        <span class="tag">สนใจ: AI, HTML, Web Dev, UX/UI</span>
+      </p>
+    </section>
+
+    <section id="skills">
+      <h2>2. ทักษะ (Skills)</h2>
+      <ul>
+        <li><b>Programming:</b> Python, JavaScript, HTML, CSS</li>
+        <li><b>AI & Data:</b> TensorFlow, scikit-learn, UX/UI</li>
+        <li><b>Tools:</b> Git, VS Code, Google Colab</li>
+      </ul>
+    </section>
+
+    <section id="projects">
+      <h2>3. ผลงานที่ผ่านมา (Projects / Portfolio)</h2>
+      <ul>
+        <a href="https://www.figma.com/proto/IGrqIdGlRfW0xy652DzRgn/Untitled?node-id=1-2&starting-point-node-id=1%3A2">Fima การออกแบบ การซื้อเสื้อผ้า</a></p>
+    
+      </ul>
+    </section>
+
+    <section id="education">
+      <h2>4. การศึกษา (Education)</h2>
+      <p>ประถม โรงเรียนบ้านหนองสิมโนนสวรรค์ จ.บึงกาฬ<br>ป.1-ป.4 (2555 – 2558)</p>
+      <p>ประถม - โรงเรียนเทศบาลชัยมงคล จ.แพร่<br>ป.5-ป.6 (2559 – 2560)</p>
+      <p>มัธยมตอนต้น - โรงเรียนเทศบาลบ้านเชตวัน จ.แพร่<br>(2561 – 2563)</p>
+      <p>มัธยมตอนปลาย - โรงเรียนเซกา จ.บึงกาฬ<br>(2564 – 2566)</p>
+      <p>คณะวิทยาศาสตร์ สาขาวิชาคอมพิวเตอร์ — มหาวิทยาลัยของคุณ<br>ปริญญาตรี (2566 – ปัจจุบัน)</p>
+    </section>
+
+    <section id="activities">
+      <h2>5. กิจกรรมและผลงานอื่น ๆ (Activities / Achievements)</h2>
+      <ul>
+        <li>ผู้เข้ากีฬาวังแดง ปี 2567 เป็นตัวแทน คฑากร คณะวิทยาศาสตร์</li>
+        <img class="avatar" src="c:\Users\StealMS\Documents\งานปี 2\วังแดง.jpg" alt="avatar">
+        <li>ได้มีส่วนเกี่ยวข้อง กิจกรรมปฐมนิเทศนักศึกษาใหม่ ประจำปีการศึกษา 2568</li>
+      </ul>
+    </section>
+
+    <section id="contact">
+      <h2>6. ติดต่อ (Contact)</h2>
+      <p>📧 Email: 67040233124@udru.ac.th</a></p>
+      <p>🐙 GitHub: <a href="https://github.com/SuchanMin/SuchanMin.github.io" target="_blank">github.com/USERNAME</a></p>
+      <p>💼 LinkedIn / Portfolio: <a href="#">คลิกที่นี่</a></p>
+      <p>   เบอร์ติดต่อ : 080-802-2583</p>
+    </section>
+
+    <section id="career">
+      <h2>7. เป้าหมายอาชีพ (Career Interest)</h2>
+      <p>ต้องการทำงานด้าน UX/UI Designer หรือนักออกแบบกราฟิก และ วิศวกร Front-end</p>
+    </section>
+
+    <footer>
+      © 2025 สร้างโดย นางสาว สุจรรย์จิรา วงค์สกูล — Portfolio หน้าแรก GitHub.io
+    </footer>
+  </div>
 </body>
 </html>
