--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 <body>
   <div class="container">
     <header>
-      <img class="avatar" src="c:\Users\StealMS\Documents\งานปี 2\โปรไฟแนะนำ.jpg" alt="avatar">
+      <img class="avatar" src="pic/โปรไฟแนะนำ.jpg" alt="avatar">
       <h1>ชื่อ นางสาว สุจรรย์จิรา วงค์สกูล</h1>
       <p>สนใจด้าน AI, code , การออกแบบ , การทำธุรกิจทางด้านIT
     </header>
@@ -148,7 +148,7 @@
     <section id="projects">
       <h2>3. ผลงานที่ผ่านมา (Projects / Portfolio)</h2>
       <ul>
-        <a href="https://www.figma.com/proto/IGrqIdGlRfW0xy652DzRgn/Untitled?node-id=1-2&starting-point-node-id=1%3A2">Fima การออกแบบ การซื้อเสื้อผ้า</a></p>
+        <a href="pic/วังแดง.jpg">Fima การออกแบบ การซื้อเสื้อผ้า</a></p>
     
       </ul>
     </section>
