--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
     <section id="projects">
       <h2>3. ผลงานที่ผ่านมา (Projects / Portfolio)</h2>
       <ul>
-        <a href="pic/วังแดง.jpg">Fima การออกแบบ การซื้อเสื้อผ้า</a></p>
+        <img src="pic/วังแดง.jpg">Fima การออกแบบ การซื้อเสื้อผ้า</a></p>
     
       </ul>
     </section>
