--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
-
 <!doctype html>
 <html lang="th">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Portfolio </title>
+  <title>Portfolio ของฉัน</title>
   <link href="https://fonts.googleapis.com/css2?family=Sarabun&family=Great+Vibes&display=swap" rel="stylesheet">
   <style>
     body {
@@ -121,14 +120,12 @@
     <header>
       <img class="avatar" src="pic/โปรไฟแนะนำ.jpg" alt="avatar">
       <h1>ชื่อ นางสาว สุจรรย์จิรา วงค์สกูล</h1>
-      <p>สนใจด้าน AI, code , การออกแบบ , การทำธุรกิจทางด้านIT
+      <p>สนใจด้าน AI, code</p>
     </header>
 
     <section id="profile">
       <h2>1. แนะนำตัว (Introduction / Profile)</h2>
-      <p>สวัสดีค่ะ <strong>ชื่อ นางสาว สุจรรย์จิรา วงค์สกูล</strong>
-        <p>นักศึกษาคณะวิทยาศาสตร์ สาขาเทคโนโลยีสารสนเทศ รหัสนักศึกษา 67040233124</p>
-        <p>สนใจด้าน AI และการเข้าใจด้านโค้ด การนำความรู้ที่เรียนมาพัฒนาในการใช้ชีวิตให้สะดวกขึ้น และสร้างสิ่งใหม่ ๆ ที่ตอบโจทย์ตัวเอง</p>
+      <p>สวัสดีค่ะ <strong>ชื่อ นางสาว สุจรรย์จิรา วงค์สกูล</strong> นักศึกษาคณะวิทยาศาสตร์ สนใจด้าน AI และการเข้าใจด้านโค้ด การนำความรู้ที่เรียนมาพัฒนาในการใช้ชีวิตให้สะดวกขึ้น และสร้างสิ่งใหม่ ๆ ที่ตอบโจทย์ตัวเอง</p>
       <p>
         <span class="tag">ภาษา: ไทย / English</span>
         <span class="tag">สถานะ: นักศึกษา ปี 2</span>
@@ -139,23 +136,22 @@
     <section id="skills">
       <h2>2. ทักษะ (Skills)</h2>
       <ul>
-        <li><b>Programming:</b> Python, JavaScript, HTML, CSS</li>
-        <li><b>AI & Data:</b> TensorFlow, scikit-learn, UX/UI</li>
-        <li><b>Tools:</b> Git, VS Code, Google Colab</li>
+        <li><b>Programming:</b> Python, JavaScript, HTML, C ,ux/xi</li>
+        <li><b>AI & Data:</b> TensorFlow, scikit-learn </li>
+        <li><b>Tools:</b> github, VS Code, Google Colab</li>
       </ul>
     </section>
 
     <section id="projects">
       <h2>3. ผลงานที่ผ่านมา (Projects / Portfolio)</h2>
       <ul>
-        <img src="pic/วังแดง.jpg">Fima การออกแบบ การซื้อเสื้อผ้า</a></p>
-    
+        <a href = "https://www.figma.com/proto/IGrqIdGlRfW0xy652DzRgn/Untitled?node-id=1-2&starting-point-node-id=1%3A2"> Fima การออกแบบแอปซื้อเสื้อผ้า</a>
       </ul>
     </section>
 
     <section id="education">
       <h2>4. การศึกษา (Education)</h2>
-      <p>ประถม โรงเรียนบ้านหนองสิมโนนสวรรค์ จ.บึงกาฬ<br>ป.1-ป.4 (2555 – 2558)</p>
+      <p>มัธยมตอนปลาย - โรงเรียนบ้านหนองสิมโนนสวรรค์ จ.บึงกาฬ<br>ป.1-ป.4 (2555 – 2558)</p>
       <p>ประถม - โรงเรียนเทศบาลชัยมงคล จ.แพร่<br>ป.5-ป.6 (2559 – 2560)</p>
       <p>มัธยมตอนต้น - โรงเรียนเทศบาลบ้านเชตวัน จ.แพร่<br>(2561 – 2563)</p>
       <p>มัธยมตอนปลาย - โรงเรียนเซกา จ.บึงกาฬ<br>(2564 – 2566)</p>
@@ -166,7 +162,7 @@
       <h2>5. กิจกรรมและผลงานอื่น ๆ (Activities / Achievements)</h2>
       <ul>
         <li>ผู้เข้ากีฬาวังแดง ปี 2567 เป็นตัวแทน คฑากร คณะวิทยาศาสตร์</li>
-        <img class="avatar" src="c:\Users\StealMS\Documents\งานปี 2\วังแดง.jpg" alt="avatar">
+        <img class="avatar" src="pic/วังแดง.jpg" alt="avatar">
         <li>ได้มีส่วนเกี่ยวข้อง กิจกรรมปฐมนิเทศนักศึกษาใหม่ ประจำปีการศึกษา 2568</li>
       </ul>
     </section>
@@ -174,9 +170,8 @@
     <section id="contact">
       <h2>6. ติดต่อ (Contact)</h2>
       <p>📧 Email: 67040233124@udru.ac.th</a></p>
-      <p>🐙 GitHub: <a href="https://github.com/SuchanMin/SuchanMin.github.io" target="_blank">github.com/USERNAME</a></p>
+      <p>🐙 GitHub: <a href="https://github.com/SuchanMin/SuchanMin.github.io/blob/main/index.html" target="_blank">github.com/USERNAME</a></p>
       <p>💼 LinkedIn / Portfolio: <a href="#">คลิกที่นี่</a></p>
-      <p>   เบอร์ติดต่อ : 080-802-2583</p>
     </section>
 
     <section id="career">
@@ -190,3 +185,4 @@
   </div>
 </body>
 </html>
+
