--- a/index.html
+++ b/index.html
@@ -164,6 +164,9 @@
         <li>ผู้เข้ากีฬาวังแดง ปี 2567 เป็นตัวแทน คฑากร คณะวิทยาศาสตร์</li>
         <img class="avatar" src="pic/วังแดง.jpg" alt="avatar">
         <li>ได้มีส่วนเกี่ยวข้อง กิจกรรมปฐมนิเทศนักศึกษาใหม่ ประจำปีการศึกษา 2568</li>
+        <li> ได้มีส่วนรวมการต้อนรับน้อง</li>
+        <img class="avatar" src="pic/30579.jpg" alt="avatar">
+
       </ul>
     </section>
 
